--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
       </div>
 
       <!-- LIST OF SPECIALISTS -->
-      <div>
+      <div class="d-flex mt-5">
         <!-- LEFT SECTION -->
         <div class="owl-carousel specialists-left">
           <section>
-            <h5>MAAK KENNY</h5>
+            <h5 class="s1-color">MAAK KENNY</h5>
             <h4>Specialisten uitgelicht</h4>
             <p>
               Maak kennis met enkele gewaardeerde specialisten die zich hier
@@ -158,7 +158,7 @@
             </p>
           </section>
           <section>
-            <h5>MAAK KENNY</h5>
+            <h5 class="s1-color">MAAK KENNY</h5>
             <h4>Specialisten uitgelicht</h4>
             <p>
               Maak kennis met enkele gewaardeerde specialisten die zich hier
@@ -166,7 +166,7 @@
             </p>
           </section>
           <section>
-            <h5>MAAK KENNY</h5>
+            <h5 class="s1-color">MAAK KENNY</h5>
             <h4>Specialisten uitgelicht</h4>
             <p>
               Maak kennis met enkele gewaardeerde specialisten die zich hier
@@ -174,12 +174,66 @@
             </p>
           </section>
           <section>
-            <h5>MAAK KENNY</h5>
+            <h5 class="s1-color">MAAK KENNY</h5>
             <h4>Specialisten uitgelicht</h4>
             <p>
               Maak kennis met enkele gewaardeerde specialisten die zich hier
               graag even aan je voorstellen.
             </p>
+          </section>
+        </div>
+        <!-- RIGHT SECTION -->
+        <div class="ms-3 d-flex justify-evenly">
+          <section class="specialists-right-card p-5">
+            <div class="text-center circle">
+              <img src="#" alt="IMAGE" />
+            </div>
+            <h3 class="p-color">Naam Specialist</h3>
+            <h4 class="s1-color">Specialisme</h4>
+            <h5 class="p-color">Location</h5>
+            <p>Zevenaar, Arnhem e.o.</p>
+            <h5>Ervaring</h5>
+            <p>5 jaar</p>
+            <h5>Uurtarief</h5>
+            <p>$95</p>
+            <h5>Reviews(124)</h5>
+            <div class="text-center">
+              <button class="right-sec-btn mt-5 circle">></button>
+            </div>
+          </section>
+          <section class="specialists-right-card p-5">
+            <div class="text-center circle">
+              <img src="#" alt="IMAGE" />
+            </div>
+            <h3 class="p-color">Naam Specialist</h3>
+            <h4 class="s1-color">Specialisme</h4>
+            <h5 class="p-color">Location</h5>
+            <p>Zevenaar, Arnhem e.o.</p>
+            <h5>Ervaring</h5>
+            <p>5 jaar</p>
+            <h5>Uurtarief</h5>
+            <p>$95</p>
+            <h5>Reviews(124)</h5>
+            <div class="text-center">
+              <button class="right-sec-btn mt-5 circle">></button>
+            </div>
+          </section>
+          <section class="specialists-right-card p-5">
+            <div class="text-center circle">
+              <img src="#" alt="IMAGE" />
+            </div>
+            <h3 class="p-color">Naam Specialist</h3>
+            <h4 class="s1-color">Specialisme</h4>
+            <h5 class="p-color">Location</h5>
+            <p>Zevenaar, Arnhem e.o.</p>
+            <h5>Ervaring</h5>
+            <p>5 jaar</p>
+            <h5>Uurtarief</h5>
+            <p>$95</p>
+            <h5>Reviews(124)</h5>
+            <div class="text-center">
+              <button class="right-sec-btn mt-5 circle">></button>
+            </div>
           </section>
         </div>
       </div>
